tests/async_component_syntax_disabled/async_component_syntax_disabled.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Async component syntax is not supported. [unsupported-syntax]

      v-------------------------------------------------------------------------
   3| async component AsyncComp() { // ERROR: async component syntax not enabled
   4|   await Promise.resolve();
   5|   return <div />;
   6| }
      ^


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Async hook syntax is not supported. [unsupported-syntax]

       v--------------------------------------------------------------------------
    8| async hook useAsyncHook(): string { // ERROR: async hook syntax not enabled
    9|   const result = await Promise.resolve("hello");
   10|   return result;
   11| }
       ^


Error ---------------------------------------------------------------------------------------------------- test.js:10:10

Cannot return `result` because `Promise` [1] is incompatible with string [2]. [incompatible-type]

   test.js:10:10
     10|   return result;
                  ^^^^^^

References:
   <BUILTINS>/core.js:2285:15
   2285| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]
   test.js:8:28
      8| async hook useAsyncHook(): string { // ERROR: async hook syntax not enabled
                                    ^^^^^^ [2]



Found 3 errors
